Correction on mobile nav bar - viewPort meta

--- a/styles/head.css
+++ b/styles/head.css
@@ -7,6 +7,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  width: 100%;
 }
 
 /* Indroduction section */
@@ -94,8 +95,11 @@ nav{
   body{
     overflow-x: hidden;
   }
-    .mainLogo{
+  .mainLogo{
     width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
   }
   .socialLogos{
     display: none;
